<resources>
    <string name="app_name">Leaf Disease Identification</string>
    <string name="features_names">features</string>
    <string name="descriptionFeature">featureDescription</string>
    <string name="take_picture">Take Picture</string>
    <string name="peach_leaf_bacterial_spots">Peach leaf - Bacterial Spots</string>
    <string name="from_gallery">From Gallery</string>
    <string name="skip">SKIP</string>
    <string name="feed">Feed</string>
    <string name="detect">Detect</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_version">1.0.0</string>
    <string name="summary_support">Any Questions? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="pref_header_about">About</string>


    <string name="slide1_title">IDENTIFY</string>
    <string name="slide1_desc">Detect any leaf diseases easily</string>

    <string name="slide2_title">DEEP LEARNING MODELS</string>
    <string name="slide2_desc">with the power of deep learning</string>

    <string name="slide3_title">ONLINE AND OFFLINE</string>
    <string name="slide3_desc">Can be used it online and offline</string>

    <string name="slide4_title">LATEST INFORMATION ABOUT DISEASES</string>
    <string name="slide4_desc">View the diseases information and its preventive measures</string>

    <string name="my_preferences">com.abc.com.pref</string>
    <string name="my_preference_key">com.abc.com.prefKey</string>
    <string name="Detect">detect</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="register">Sign Up</string>
    <string name="already_registered">Already Have an Account ? </string>
    <string name="login">Login</string>
    <string name="not_registered">No Account?</string>
    <string name="measureinfo">THis disease can be easilt tread with the fertilizers and taking care of the plant every day. New soild can be added. LAter on after few weeks, again inspect teh leaves and feed with anoter two fertilizers and spray.Plant Disease is designed to run on medium to high-spec budget devices to maximise application efficiency and speed. Minimum smart phone requirements are outline below and plant leaf disease identification can run on devices, tablets which uses android as the operating system.</string>
    <string name="Online_Detect">Detect Firebase</string>

</resources>