<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feed"
        android:title="@string/feed"
        android:enabled="true"

        android:icon="@drawable/ic_baseline_dynamic_feed_24"
        />

    <item
        android:id="@+id/detect"
        android:title="@string/detect"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_control_camera_24"/>
    <item
        android:id="@+id/help"
        android:enabled="true"
        android:title="@string/help"
        android:icon="@drawable/ic_baseline_help_24"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>